# ZisK-CLI

./: .gitignore  LICENSE  NPM_DESCRIPTION.md  PACKAGE_DESCRIPTION.md  README.md  jest.config.js  package-lock.json  package.json  test-cli.js
global-test/: README.md  zisk-dev.config.js
global-test/inputs/: example.yaml
global-test/programs/zisk/: Cargo.toml
global-test/scripts/: setup.sh
my-zisk-project/: README.md  zisk-dev.config.js
my-zisk-project/docs/: getting-started.md
my-zisk-project/scripts/: test.sh
scripts/: postinstall.js
src/: commands.js  config.js  converter.js  errors.js  executor.js  logger.js  platform.js  project.js  system.js  templates.js
src/processors/: mod.rs
test-final/: README.md  zisk-dev.config.js
test-final/programs/zisk/: Cargo.toml
test-fix/: .zisk-env
test-new-init/programs/zisk/: Cargo.toml  build.rs
test-new-init/programs/zisk/src/: main.rs
test-project/: .gitignore  README.md  zisk-dev.config.js
test-project/inputs/: example.json
test-project/programs/zisk/: Cargo.toml
tests/unit/: platform.test.js
