[package]
name = "comprehensive-test"
version = "0.1.0"
edition = "2021"
default-run = "comprehensive-test"

[dependencies]
byteorder = "1.5.0"
sha2 = "0.10.8"
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
